--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Campaign Trail Showcase is based upon The New Campaign Trail by Decstar which is based upon The Campaign Trail by Dan Bryan, and is updated to include new features." />
+	<meta name="description" content="Campaign Trail Showcase SHOWCASE, based on Dan Bryan's great game, but only the best mods." />
 
 	<title>Campaign Trail Showcase</title>
 
