--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Campaign Trail Showcase SHOWCASE, based on Dan Bryan's great game, but only the best mods." />
-
-	<title>Campaign Trail Showcase</title>
+	<title>Campaign Trail ShowcaseSC</title>
 
 </head>
 
