--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head>
-	<title>Campaign Trail ShowcaseSC</title>
+	<title>Jakes919.github.io</title>
 
 </head>
 
 </HEAD>
 <BODY>
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=/campaign-trail/index.html">
+	<h1>Hello</h1>
+	<p>Campaign Trail but Better.</p>
 </body>
 
 </html>
